@@ -70,6 +70,7 @@ Bugs fixed
 * #8131: linkcheck: Use GET when HEAD requests cause Too Many Redirects, to
   accommodate infinite redirect loops on HEAD
 * #8437: Makefile: ``make clean`` with empty BUILDDIR is dangerous
+* #8352: std domain: Failed to parse an option that starts with bracket
 
 Testing
 --------
